# auditor-iso-pro

./: .dockerignore  .env.example  .gitignore  .ruff.toml  .~lock.Matriz_Cumplimiento_IA_SEC_Salud.xlsx#  ARQUITECTURA_MATRIZ_RIESGOS_IA.md  CHANGELOG.md  Dockerfile  GAP.xlsx  Matriz_Confluencia_Auditoria_IA.xlsx  Matriz_Cumplimiento_IA_SEC_Salud.xlsx  README.md  TUTORIAL_IA_SEC_AUDITOR_TOOL.md  app.py  audit_logger.py  auditor.py  autodiagnostico.py  config.yaml  convert_to_md.py  database.py  diagnosticar_rag.py  docker-compose.yml  generar_excel_salud.py  guia_auditor.py  guia_auditoria.py  interoperabilidad.py  justificacion_metodologica_grc.md  mapping_normativo.json  pdf_export.py  pyproject.toml  rag_knowledge.py  regenerar_indice.py  requirements.txt  setup.bat  setup.sh  test_app.py  test_guide.py  typed_dicts.py
auditor-iso-pro/: app.py
components/: sidebar.py
core/: chunking.py  embeddings.py  llm_factory.py  logo.py  rag_engine.py  theme.py
data/: Matriz_Riesgos_IA.xlsx  reportes.db
ingestor/: __init__.py  context_prompt.py  excel_export.py  normalizer.py  ransomware_feed.py  risk_matrix.py  sources.py
knowledge_base/: ITIL_Ciberseguridad_Estudiantes.pptx  MITRE ATT&CK y la Pirámide del Dolor.pptx  Matriz RACI_PCI DSS (1).xlsx  Matriz declaración de aplicabilidad de la ISO 27001-2013.xls  NIST Cybersecurity Framework (CSF) 2.pptx  PCI_DSS Presentacion.pptx  Presentación OWASP.pptx  SOC 2.pptx  iso_27001_extract_sample.txt  🔵 Marco Normativo y Gobernanza.docx
services/: analysis_service.py  rag_service.py
styles/: theme.css
tests/: conftest.py  (+3 more)
(+38 files in other folders)
