[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "auditor-iso-pro"
version = "1.0.0"
description = "AuditAI Pro - Gap Analysis automatizado de políticas de seguridad ISO/IEC 27001:2022, ISO/IEC 42001:2023, NIST AI RMF"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit==1.59.1",
    "streamlit-authenticator==0.4.2",
    "langchain==1.3.12",
    "langchain-openai==1.3.4",
    "langchain-google-genai==4.2.7",
    "langchain-community==0.4.2",
    "langchain-huggingface==1.2.2",
    "pypdf==6.14.2",
    "python-dotenv==1.2.2",
    "plotly==6.9.0",
    "reportlab==5.0.0",
    "faiss-cpu==1.14.3",
    "sentence-transformers==5.6.0",
    "requests==2.34.2",
    "openai==2.45.0",
    "openpyxl==3.1.5",
    "schedule==1.2.2",
    "pyyaml==6.0.3",
    "google-genai==2.11.0",
    "groq==1.5.0",
    "docx2txt==0.9",
]

[project.scripts]
auditor-iso-pro = "app:main"
